docs-website/versioned_docs/version-3.0/pipeline-components/generators.mdx
---
title: "Generators"
id: generators
slug: "/generators"
description: "Generators are responsible for generating text after you give them a prompt. They are specific for each LLM technology (OpenAI, local, TGI and others)."
---

# Generators

Generators are responsible for generating text after you give them a prompt. They are specific for each LLM technology (OpenAI, local, TGI and others).

| Generator                                                            | Description                                                                                                                                                                                                              | Streaming Support |
| --- | --- | --- |
| [AmazonBedrockChatGenerator](generators/amazonbedrockchatgenerator.mdx)       | Enables chat completion using models through Amazon Bedrock service.                                                                                                                                                     | ✅                 |
| [AmazonBedrockGenerator](generators/amazonbedrockgenerator.mdx)               | Enables text generation using models through Amazon Bedrock service.                                                                                                                                                     | ✅                 |
| [AIMLAPIChatGenerator](generators/aimllapichatgenerator.mdx)                   | Enables chat completion using AI models through the AIMLAPI.                                                                                                                                                             | ✅                 |
| [AnthropicChatGenerator](generators/anthropicchatgenerator.mdx)                 | This component enables chat completions using Anthropic large language models (LLMs).                                                                                                                                    | ✅                 |
| [AnthropicFoundryChatGenerator](generators/anthropicfoundrychatgenerator.mdx)   | This component enables chat completions using Anthropic models served through Azure Foundry.                                                                                                                             | ✅                 |
| [AnthropicVertexChatGenerator](generators/anthropicvertexchatgenerator.mdx)     | This component enables chat completions using AnthropicVertex API.                                                                                                                                                       | ✅                 |
| [AnthropicGenerator](generators/anthropicgenerator.mdx)                         | This component enables text completions using Anthropic large language models (LLMs).                                                                                                                                    | ✅                 |
| [AzureOpenAIChatGenerator](generators/azureopenaichatgenerator.mdx)           | Enables chat completion using OpenAI's LLMs through Azure services.                                                                                                                                                      | ✅                 |
| [AzureOpenAIResponsesChatGenerator](generators/azureopenairesponseschatgenerator.mdx) | Enables chat completion using OpenAI's Responses API through Azure services with support for reasoning models.                                                                                                           | ✅                 |
| [CohereChatGenerator](generators/coherechatgenerator.mdx)                     | Enables chat completion using Cohere's LLMs.                                                                                                                                                                             | ✅                 |
| [CohereGenerator](generators/coheregenerator.mdx)                             | Queries the LLM using Cohere API.                                                                                                                                                                                        | ✅                 |
| [CometAPIChatGenerator](generators/cometapichatgenerator.mdx)                 | Enables chat completion using AI models through the Comet API.                                                                                                                                                           | ✅                 |
| [FallbackChatGenerator](generators/fallbackchatgenerator.mdx)                   | A ChatGenerator wrapper that tries multiple Chat Generators sequentially until one succeeds.                                                                                                                             | ✅                 |
| [GoogleAIGeminiChatGenerator](generators/googleaigeminichatgenerator.mdx)     | Enables chat completion using Google Gemini models. **_This integration will be deprecated soon. We recommend using [GoogleGenAIChatGenerator](generators/googlegenaichatgenerator.mdx) integration instead._**                     | ✅                 |
| [GoogleAIGeminiGenerator](generators/googleaigeminigenerator.mdx)             | Enables text generation using Google Gemini models. **_This integration will be deprecated soon. We recommend using [GoogleGenAIChatGenerator](generators/googlegenaichatgenerator.mdx)  integration instead._**                    | ✅                 |
| [GoogleGenAIChatGenerator](generators/googlegenaichatgenerator.mdx)             | Enables chat completion using Google Gemini models through Google Gen AI SDK.                                                                                                                                            | ✅                 |
| [HuggingFaceAPIChatGenerator](generators/huggingfaceapichatgenerator.mdx)     | Enables chat completion using various Hugging Face APIs.                                                                                                                                                                 | ✅                 |
| [TransformersChatGenerator](generators/transformerschatgenerator.mdx) | Provides an interface for chat completion using a Hugging Face model that runs locally.                                                                                                                                  | ✅                 |
| [LiteLLMChatGenerator](generators/litellmchatgenerator.mdx)                     | Enables chat completion using various LLM providers through LiteLLM.                                                                                                                                                 | ✅                 |
| [LlamaCppChatGenerator](generators/llamacppchatgenerator.mdx)                   | Enables chat completion using an LLM running on Llama.cpp.                                                                                                                                                               | ❌                 |
| [LlamaCppGenerator](generators/llamacppgenerator.mdx)                         | Generate text using an LLM running with Llama.cpp.                                                                                                                                                                       | ❌                 |
| [LlamaStackChatGenerator](generators/llamastackchatgenerator.mdx)         | Enables chat completions using an LLM model made available via Llama Stack server                                                                                                                                        | ✅                 |
| [MetaLlamaChatGenerator](generators/metallamachatgenerator.mdx)                 | Enables chat completion with any model hosted available with Meta Llama API.                                                                                                                                             | ✅                 |
| [MistralChatGenerator](generators/mistralchatgenerator.mdx)                   | Enables chat completion using Mistral's text generation models.                                                                                                                                                          | ✅                 |
| [MockChatGenerator](generators/mockchatgenerator.mdx)                         | Returns predefined responses without calling any API — a deterministic, zero-cost stand-in for real Chat Generators in tests and prototypes.                                                                             | ✅                 |
| [NvidiaChatGenerator](generators/nvidiachatgenerator.mdx)                       | Enables chat completion using Nvidia-hosted models.                                                                                                                                                                      | ✅                 |
| [NvidiaGenerator](generators/nvidiagenerator.mdx)                             | Provides an interface for generating text using LLMs self-hosted with NVIDIA NIM or models hosted on the NVIDIA API catalog.                                                                                             | ❌                 |
| [OllamaChatGenerator](generators/ollamachatgenerator.mdx)                     | Enables chat completion using an LLM running on Ollama.                                                                                                                                                                  | ✅                 |
| [OllamaGenerator](generators/ollamagenerator.mdx)                             | Provides an interface to generate text using an LLM running on Ollama.                                                                                                                                                   | ✅                 |
| [OpenAIChatGenerator](generators/openaichatgenerator.mdx)                     | Enables chat completion using OpenAI's large language models (LLMs).                                                                                                                                                     | ✅                 |
| [OpenAIImageGenerator](generators/openaiimagegenerator.mdx)                   | Generate images using OpenAI's image generation models such as `gpt-image-2`.                                                                                                                                            | ❌                 |
| [OpenAIResponsesChatGenerator](generators/openairesponseschatgenerator.mdx)   | Enables chat completion using OpenAI's Responses API with support for reasoning models.                                                                                                                                  | ✅                 |
| [OpenRouterChatGenerator](generators/openrouterchatgenerator.mdx)               | Enables chat completion with any model hosted on OpenRouter.                                                                                                                                                             | ✅                 |
| [OrcaRouterChatGenerator](generators/orcarouterchatgenerator.mdx)               | Enables chat completion using models routed through OrcaRouter.                                                                                                                                                          | ✅                 |
| [PerplexityChatGenerator](generators/perplexitychatgenerator.mdx)               | Enables chat completion using models via the Perplexity Agent API.                                                                                                                                                       | ✅                 |
| [SagemakerGenerator](generators/sagemakergenerator.mdx)                       | Enables text generation using LLMs deployed on Amazon Sagemaker.                                                                                                                                                         | ❌                 |
| [STACKITChatGenerator](generators/stackitchatgenerator.mdx)                     | Enables chat completions using the STACKIT API.                                                                                                                                                                          | ✅                 |
| [TogetherAIChatGenerator](generators/togetheraichatgenerator.mdx)               | Enables chat completion using models hosted on Together AI.                                                                                                                                                              | ✅                 |
| [TogetherAIGenerator](generators/togetheraigenerator.mdx)                       | Enables text generation using models hosted on Together AI.                                                                                                                                                              | ✅                 |
| [VertexAICodeGenerator](generators/vertexaicodegenerator.mdx)                 | Enables code generation using Google Vertex AI generative model.                                                                                                                                                         | ❌                 |
| [VertexAIGeminiChatGenerator](generators/vertexaigeminichatgenerator.mdx)     | Enables chat completion using Google Gemini models with GCP Vertex AI. **_This integration will be deprecated soon. We recommend using [GoogleGenAIChatGenerator](generators/googlegenaichatgenerator.mdx)  integration instead._** | ✅                 |
| [VertexAIGeminiGenerator](generators/vertexaigeminigenerator.mdx)             | Enables text generation using Google Gemini models with GCP Vertex AI. **_This integration will be deprecated soon. We recommend using [GoogleGenAIChatGenerator](generators/googlegenaichatgenerator.mdx)  integration instead._** | ✅                 |
| [VertexAIImageCaptioner](generators/vertexaiimagecaptioner.mdx)               | Enables text generation using Google Vertex AI `imagetext` generative model.                                                                                                                                             | ❌                 |
| [VertexAIImageGenerator](generators/vertexaiimagegenerator.mdx)               | Enables image generation using Google Vertex AI generative model.                                                                                                                                                        | ❌                 |
| [VertexAIImageQA](generators/vertexaiimageqa.mdx)                             | Enables text generation (image captioning) using Google Vertex AI generative models.                                                                                                                                     | ❌                 |
| [VertexAITextGenerator](generators/vertexaitextgenerator.mdx)                 | Enables text generation using Google Vertex AI generative models.                                                                                                                                                        | ❌                 |
| [VLLMChatGenerator](generators/vllmchatgenerator.mdx)                         | Enables chat completion using models served with vLLM.                                                                                                                                                                   | ✅                 |
| [WatsonxGenerator](generators/watsonxgenerator.mdx)                             | Enables text generation with IBM Watsonx models.                                                                                                                                                                         | ✅                 |
| [WatsonxChatGenerator](generators/watsonxchatgenerator.mdx)                     | Enables chat completions with IBM Watsonx models.                                                                                                                                                                        | ✅                 |
